a lot of changes are made on flights and planes

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -16,6 +16,7 @@
     "Admins" : "المشرفون",
     "Passengers" : "الركاب",
     "Flights" : "الرحلات",
+    "Planes": "الطائرات",
     "Payments" : "المدفوعات",
     "Tickets": "التذاكر",
     "Site Settings": "إعدادات الموقع",
